@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2025-11-07T00:00:00Z",
@@ -14,6 +14,11 @@
     },
     {
       "timestamp": "2025-11-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-19T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
